--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
 						mt-1 me-3 shadow-sm">
 							Volver
 						</button>
-						<button type="submit" id="btnPricingPDF" class="btn btn-success text-uppercase fw-bolder py-2 px-3
+						<div id="btnPricingPDF" class="btn btn-success text-uppercase fw-bolder py-2 px-3
 						mt-1 ms-3 shadow-sm">
 							Guardar PDF
-						</button>
+						</div>
 					</form>
 				</div>
 			</div>
