--- a/index.html
+++ b/index.html
@@ -51,9 +51,6 @@
 						<li class="nav-item">
 							<a class="nav-link" href="#pricingSection">Cotizaciones</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#contactSection">Contacto</a>
-						</li>
 					</ul>
 				</div>
 			</div>
@@ -241,6 +238,13 @@
 				</div>
 			</div>
 		</div>
+	</section>
+	<section id="footer">
+		<footer class="container-fluid px-5 pb-5">
+			<div class="row justify-content-center text-center">
+				<p class="d-block text-light mt-5">Alejandro Dominguez</p>
+			</div>
+		</footer>
 	</section>
 </body>
 </html>
